--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -904,7 +904,7 @@ div.TOC:empty {
 
 #TOC {
     margin: 0 2.25em 1.5em 0;
-    padding: 0.625em 0.75em;
+    padding: 0.625em 0.75em 0.75em 0.75em;
     position: relative;
     z-index: 20;
 }
