--- a/css/include/components/colors-dark-GENERATED.css
+++ b/css/include/components/colors-dark-GENERATED.css
@@ -40,6 +40,7 @@
      */
     --GW-TOC-border-color: #5c5c5c;
     --GW-TOC-background-color: #212121;
+    --GW-TOC-collapse-button-background-color: rgba(33, 33, 33, 0.8);
     --GW-TOC-link-hover-background-color: #363636;
     --GW-TOC-link-hover-color: #fff;
     --GW-TOC-link-hover-indicator-bar-color: #5c5c5c;
