--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -41,6 +41,7 @@
      */
     --GW-TOC-border-color: #ccc;
     --GW-TOC-background-color: #f8f8f8;
+    --GW-TOC-collapse-button-background-color: rgba(248, 248, 248, 0.8);
     --GW-TOC-link-hover-background-color: #ececec;
     --GW-TOC-link-hover-color: #000;
     --GW-TOC-link-hover-indicator-bar-color: #ccc;
@@ -1803,6 +1804,7 @@ body.special-halloween-dark h6 {
      */
     --GW-TOC-border-color: #5c5c5c;
     --GW-TOC-background-color: #212121;
+    --GW-TOC-collapse-button-background-color: rgba(33, 33, 33, 0.8);
     --GW-TOC-link-hover-background-color: #363636;
     --GW-TOC-link-hover-color: #fff;
     --GW-TOC-link-hover-indicator-bar-color: #5c5c5c;
