Dark mode styling fix for include-link loading spinners

--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -2363,6 +2363,12 @@ img.invert-auto:hover {
     opacity: 0.4;
 }
 
+/*	Include-link loading spinner.
+ */
+a.include-loading.include-spinner::after {
+	filter: invert(1);
+}
+
 /*	All mode selectors.
  */
 div.mode-selector button::before,
