--- a/css/include/dark-mode-GENERATED.css
+++ b/css/include/dark-mode-GENERATED.css
@@ -599,6 +599,12 @@ img.invert-auto:hover {
     opacity: 0.4;
 }
 
+/*	Include-link loading spinner.
+ */
+a.include-loading.include-spinner::after {
+	filter: invert(1);
+}
+
 /*	All mode selectors.
  */
 div.mode-selector button::before,
