--- a/css/default.css
+++ b/css/default.css
@@ -4034,7 +4034,7 @@ body.index-directory #footer {
 
     background-color: var(--GW-popups-popup-background-color);
     padding: 0.7em 0.9em 0.8em 0.9em;
-    overflow: auto;
+    display: flow-root;
 }
 
 /*┌─────────────┐*/
@@ -4789,7 +4789,7 @@ body.index-directory #footer {
     background-color: var(--GW-popins-popin-background-color);
     --GW-link-underline-background-color: var(--GW-popins-popin-title-bar-background-color);
     padding: 0.7em 0.9em 0.8em 0.9em;
-    overflow: auto;
+    display: flow-root;
 }
 
 /*┌─────────────┐*/
