--- a/css/default.css
+++ b/css/default.css
@@ -1001,6 +1001,28 @@ body.index .markdownBody .section-link-list ul > li::before {
     list-style-type: lower-alpha;
 }
 
+/*	Specific list type overrides. Disabled for now, until/unless all source 
+	files are rewritten to appropriately use generic or specific list syntax.
+	(See https://pandoc.org/MANUAL.html#extension-startnum .)
+	—SA 2023-03-25
+/*
+.markdownBody ol[type='1'] {
+    list-style-type: decimal;
+}
+.markdownBody ol[type='a'] {
+    list-style-type: lower-alpha;
+}
+.markdownBody ol[type='A'] {
+    list-style-type: upper-alpha;
+}
+.markdownBody ol[type='i'] {
+    list-style-type: lower-roman;
+}
+.markdownBody ol[type='I'] {
+    list-style-type: upper-roman;
+}
+ */
+
 /*=------------------=*/
 /*= Weird edge cases =*/
 /*=------------------=*/
