--- a/css/include/dark-mode-GENERATED.css
+++ b/css/include/dark-mode-GENERATED.css
@@ -40,7 +40,11 @@
      */
     --GW-TOC-border-color: #5c5c5c;
     --GW-TOC-background-color: #212121;
-    --GW-TOC-collapse-button-background-color: rgba(33, 33, 33, 0.8);
+    --GW-TOC-collapse-button-text-color: #5c5c5c;
+    --GW-TOC-collapse-button-text-hover-color: #000;
+    --GW-TOC-collapse-button-color: rgba(33, 33, 33, 0.8);
+    --GW-TOC-collapse-button-hover-color: #494949;
+    --GW-TOC-collapse-button-border-hover-color: #fff;
     --GW-TOC-link-hover-background-color: #363636;
     --GW-TOC-link-hover-color: #fff;
     --GW-TOC-link-hover-indicator-bar-color: #5c5c5c;
@@ -52,19 +56,12 @@
 	--GW-abstract-collapse-blockquote-hover-color: #333;
 	--GW-collapse-disclosure-button-color: #333;
 	--GW-collapse-disclosure-button-hover-color: #494949;
-	--GW-collapse-disclosure-button-color-15-percent-transparent: rgba(51, 51, 51, 0.85);
-	--GW-collapse-disclosure-button-hover-color-15-percent-transparent: rgba(73, 73, 73, 0.85);
-	--GW-collapse-disclosure-button-color-30-percent-transparent: rgba(51, 51, 51, 0.70);
-	--GW-collapse-disclosure-button-hover-color-30-percent-transparent: rgba(73, 73, 73, 0.70);
 	--GW-collapse-in-blockquote-disclosure-button-color: #494949;
 	--GW-collapse-in-blockquote-disclosure-button-hover-color: #5c5c5c;
-	--GW-collapse-in-blockquote-disclosure-button-color-30-percent-transparent: rgba(73, 73, 73, 0.70);
-	--GW-collapse-in-blockquote-disclosure-button-hover-color-30-percent-transparent: rgba(92, 92, 92, 0.70);
-	--GW-collapse-disclosure-button-top-part-text-color: #6c6c6c;
-	--GW-collapse-disclosure-button-bottom-part-text-color: #7c7c7c;
-	--GW-collapse-in-blockquote-disclosure-button-top-part-text-color: #7c7c7c;
-	--GW-collapse-in-blockquote-disclosure-button-bottom-part-text-color: #999;
+	--GW-collapse-disclosure-button-text-color: #6c6c6c;
 	--GW-collapse-disclosure-button-text-hover-color: #000;
+	--GW-collapse-in-blockquote-disclosure-button-text-color: #8b8b8b;
+	--GW-collapse-in-blockquote-disclosure-button-text-hover-color: #999;
 
     /*  Headings.
      */
@@ -370,43 +367,6 @@
 	--GW-transparent-svg-background-color: #fff;
 }
 
-/*  The ‘fill’ attribute of the SVGs is modified in dark mode.
-    (We cannot use an invert filter because we don’t want to invert the whole
-     element, only the background-image.)
- */
-:root {
-	--GW-svg-chevron-left-invert: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z" fill="%235C5C5C"/></svg>');
-	--GW-svg-chevron-left-hover-invert: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z" fill="%23000"/></svg>');
-	--GW-svg-chevron-down-invert: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z" fill="%235C5C5C"/></svg>');
-	--GW-svg-chevron-down-hover-invert: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z" fill="%23000"/></svg>');
-}
-
-.collapse .disclosure-button::before {
-    background-image: var(--GW-svg-chevron-left-invert);
-}
-.collapse .disclosure-button:hover::before {
-    background-image: var(--GW-svg-chevron-left-hover-invert);
-}
-.collapse .disclosure-button:checked::before {
-    background-image: var(--GW-svg-chevron-down-invert);
-}
-.collapse .disclosure-button:checked:hover::before {
-    background-image: var(--GW-svg-chevron-down-hover-invert);
-}
-
-#TOC button.toc-collapse-toggle-button {
-	background-image: var(--GW-svg-chevron-down-invert);
-}
-#TOC button.toc-collapse-toggle-button:hover {
-    background-image: var(--GW-svg-chevron-down-hover-invert);
-}
-#TOC.collapsed button.toc-collapse-toggle-button {
-    background-image: var(--GW-svg-chevron-left-invert);
-}
-#TOC.collapsed button.toc-collapse-toggle-button:hover {
-    background-image: var(--GW-svg-chevron-left-hover-invert);
-}
-
 
 /* some SVGs used in annotations/essays (eg. /image/genetics/selection/2023-meyer-figure1-moralacceptabilityandpersonalwillingnesstouseembryoselectionorgeneticeditinginausapopulationsurvey.svg ) were authored as transparent SVGs, assuming a *white* background. In dark-mode, with a black background set, they are illegible.
 So, in dark mode only, impose a white background on SVGs in <figure>s.
@@ -489,12 +449,6 @@ ul > li::before {
  */
 .TOC ul > li::before {
     filter: none;
-}
-
-/*	TOC uncollapse icon.
- */
-#TOC.collapsed::after {
-	filter: invert(1);
 }
 
 /*  For sortable table column headings, we use dark versions of the up/down/both
