--- a/include/inlined-graphical-linkicon-styles.html
+++ b/include/inlined-graphical-linkicon-styles.html
@@ -24,6 +24,7 @@ a[data-link-icon='plos'] { --link-icon-url: url('/static/img/icon/plos.svg'); }
 a[data-link-icon='reddit'] { --link-icon-url: url('/static/img/icon/reddit.svg'); }
 a[data-link-icon='google-scholar'] { --link-icon-url: url('/static/img/icon/google-scholar.svg'); }
 a[data-link-icon='stackexchange'] { --link-icon-url: url('/static/img/icon/stackexchange.svg'); }
+a[data-link-icon='tex'] { --link-icon-url: url('/static/img/icon/tex.svg'); }
 a[data-link-icon='theguardian'] { --link-icon-url: url('/static/img/icon/theguardian.svg'); }
 a[data-link-icon='tumblr'] { --link-icon-url: url('/static/img/icon/tumblr.svg'); }
 a[data-link-icon='twitter'] { --link-icon-url: url('/static/img/icon/twitter.svg'); }
