the great image->doc renaming, and refactoring into actual tags rather than giant image dump directories

--- a/css/default.css
+++ b/css/default.css
@@ -65,7 +65,7 @@
 	--collapse-left-offset: 1em;
 
     position: relative;
-    min-height: calc(  var(--collapse-toggle-top-height) 
+    min-height: calc(  var(--collapse-toggle-top-height)
     				 + var(--collapse-toggle-bottom-height));
     box-sizing: border-box;
     margin: 1em 0;
@@ -88,7 +88,7 @@
 }
 
 .collapse:not(.expanded) > .collapse-content-wrapper {
-    max-height: calc(  var(--collapse-toggle-top-height) 
+    max-height: calc(  var(--collapse-toggle-top-height)
     				 + var(--collapse-toggle-bottom-height));
     overflow: hidden;
 }
@@ -304,10 +304,10 @@ section.collapse.expanded > .disclosure-button .part.top .label {
 section.collapse > :first-child {
     position: relative;
     min-height: var(--collapse-toggle-top-height);
-    margin: 
-    	0 
+    margin:
+    	0
     	var(--collapse-toggle-top-height)
-    	0 
+    	0
     	calc(-1 * var(--collapse-toggle-left-width));
     padding: 0;
     z-index: 12;
@@ -382,7 +382,7 @@ div.collapse.has-abstract:not(.expanded) > .disclosure-button .part::before {
 	margin-bottom: 0.5em;
 }
 .sourceCode.collapse:not(.expanded) .collapse-content-wrapper pre {
-    max-height: calc(  var(--collapse-toggle-top-height) 
+    max-height: calc(  var(--collapse-toggle-top-height)
     				 + var(--collapse-toggle-bottom-height));
     box-sizing: border-box;
     overflow: hidden;
@@ -475,7 +475,7 @@ blockquote .collapse.has-abstract:not(.expanded) > .disclosure-button .part::bef
 }
 
 /*******************************************************************/
-/*  “Aux links” in link bibliographies, directory indexes, and other 
+/*  “Aux links” in link bibliographies, directory indexes, and other
 	transcluded (rather than pop-framed) annotations.
  */
 
@@ -500,7 +500,7 @@ blockquote .collapse.has-abstract:not(.expanded) > .disclosure-button .part::bef
  */
 .collapse.section-backlinks-container {
 	--collapse-toggle-top-height: 2.75rem;
-	
+
 	margin-top: 1.25em;
 	margin-bottom: 2em;
 	margin-left: calc(-1 * var(--collapse-left-offset));
@@ -1246,7 +1246,7 @@ video + .caption-wrapper {
     padding-bottom: 1px;
 }
 
-/*  Enable the various `![caption](/image/foo.jpg){.width-full}` uses;
+/*  Enable the various `![caption](/doc/foo/bar.jpg){.width-full}` uses;
     analogous to width-full tables
  */
 figure.width-full {
